先不忙写课程，还是先写用户。
用户列表的查询有问题。
setQueryStr感觉是异步的，但是又不能给它用await
set后不是马上就是新值
